--- a/tarea1-Copy1.ipynb
+++ b/tarea1-Copy1.ipynb
@@ -78,7 +78,12 @@
     "        df.loc[i, 'n_rooms'] = df.loc[i, 'n_rooms_y']\n",
     "        df.loc[i, 'n_bath'] = df.loc[i, 'n_bath_y']\n",
     "        df.loc[i, 'metro_cuadrado'] = df.loc[i, 'metrocuadrado_index_y']\n",
-    "\n",
+    "        \n",
+    "    # Columna que indica si los datos venian de furnished o no\n",
+    "    df._merge = df._merge.astype(object)\n",
+    "    df.loc[df[df._merge != 'left_only'].index , '_merge'] = 1\n",
+    "    df.loc[df[df._merge == 'left_only'].index,  '_merge'] = 0\n",
+    "    \n",
     "    # Dropeamos los _y\n",
     "    df.drop(['n_rooms_y', 'n_bath_y', 'metrocuadrado_index_y'],\n",
     "            axis=1, inplace=True)\n",
@@ -4320,7 +4325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
