Se comenta las funciones de la P3

--- a/tarea1-Copy1.ipynb
+++ b/tarea1-Copy1.ipynb
@@ -3896,7 +3896,28 @@
     "\n",
     "\n",
     "class RegresionBayesianaEmpirica(BaseEstimator, RegressorMixin):\n",
+    "    '''Clase derivada de BaseEstimator y RegressorMixin.\n",
+    "    \n",
+    "    Clase que crea un objeto para hacer una regresión bayesiana empírica.\n",
+    "    '''\n",
     "    def __init__(self, alpha_0, beta_0, tol=1e-5, maxiter=200):\n",
+    "        '''Método inicializa la clase.\n",
+    "        \n",
+    "        Args\n",
+    "        ----\n",
+    "        alpha_0: Float\n",
+    "            Hiperparámetro alpha para inicializar.\n",
+    "        beta_0: Float\n",
+    "            Hiperparámetro beta para inicializar.\n",
+    "        tol: Float\n",
+    "            Tolerancia del objeto.\n",
+    "        maxiter: Int\n",
+    "            Máximo de iteraciones del modelo.abs\n",
+    "            \n",
+    "        Returns\n",
+    "        -------\n",
+    "        RegresionBayesianaEmpirica\n",
+    "        '''\n",
     "        self.maxiter = maxiter\n",
     "        self.tol = tol\n",
     "        self.alpha_0 = alpha_0\n",
@@ -3907,20 +3928,63 @@
     "        self.S_n = None\n",
     "\n",
     "    def get_posteriori(self, X, y, alpha, beta):\n",
-    "\n",
+    "        '''Método calcula la densidad a posteriori.\n",
+    "        \n",
+    "        Args\n",
+    "        ----\n",
+    "        X: pd.DataFrame\n",
+    "            Matriz de observaciones.\n",
+    "            \n",
+    "        y: pd.DataFrame\n",
+    "            Vector de etiquetas.\n",
+    "            \n",
+    "        alpha: Float\n",
+    "            Hiperparametro alpha.\n",
+    "            \n",
+    "        beta: Float\n",
+    "            Hiperparametro beta.\n",
+    "            \n",
+    "        Returns\n",
+    "        -------\n",
+    "        \n",
+    "        M_n:  np.darray\n",
+    "            Vector de medias.\n",
+    "        \n",
+    "        S_n: np.darray\n",
+    "            Matriz varianza covarianza.\n",
+    "        '''\n",
     "        S_n = alpha + beta*matmul(X.T, X)\n",
     "        M_n = beta * matmul(matmul(pinv(S_n), X.T), y)\n",
     "        return M_n, S_n\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        '''Método que ajusta el modelo.\n",
+    "        \n",
+    "        Args\n",
+    "        ----\n",
+    "        X: pd.DataFrame\n",
+    "            Matriz de observaciones.\n",
+    "            \n",
+    "        y: pd.DataFrame\n",
+    "            Vector de etiquetas.\n",
+    "            \n",
+    "        Returns\n",
+    "        -------\n",
+    "        \n",
+    "        None, actualiza el objeto self.\n",
+    "        \n",
+    "        '''\n",
     "        X = np.hstack((np.ones((1, X.shape[0])).T, X))\n",
     "        N = len(y)\n",
     "        for i in range(self.maxiter):\n",
     "            t0 = time.time()\n",
     "            eigen_values, _ = eig(self.beta * matmul(X.T, X))\n",
     "            eigen_values = np.real_if_close(eigen_values)\n",
+    "            \n",
     "            gamma = (eigen_values/(self.alpha + eigen_values)).sum()\n",
+    "            \n",
     "            M_n, S_n = self.get_posteriori(X, y, self.alpha, self.beta)\n",
+    "            \n",
     "            new_alpha = gamma/(matmul(M_n.T, M_n))\n",
     "            new_beta = (N-gamma)/((y - matmul(M_n.T, X.T))\n",
     "                                  ** 2).sum()  # Revisar X.T\n",
@@ -3945,8 +4009,27 @@
     "        self.M_n = M_n\n",
     "        self.S_n = S_n\n",
     "\n",
-    "    # Predicción utilizando la media posterior predictiva\n",
     "    def predict(self, X_, return_std=False):\n",
+    "        '''Método que predice usando la posterior predictiva.\n",
+    "        \n",
+    "        Args\n",
+    "        ----\n",
+    "        X: pd.DataFrame\n",
+    "            Matriz de observaciones.\n",
+    "            \n",
+    "        return_std: Bool\n",
+    "            Indica si retorna la desv. estándar.\n",
+    "            \n",
+    "        Returns\n",
+    "        -------\n",
+    "        \n",
+    "        mu: np.array\n",
+    "            Vector de medias.\n",
+    "        \n",
+    "        std: np.array\n",
+    "            Vector de desv. estándar.\n",
+    "        \n",
+    "        '''\n",
     "        X_ = np.hstack((np.ones((1, X_.shape[0])).T, X_))\n",
     "        mu = matmul(self.M_n.T, X_.T)\n",
     "        if return_std:\n",
@@ -3954,6 +4037,13 @@
     "            return mu, std\n",
     "        else:\n",
     "            return mu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consideramos las columnas vistas en la parte 2"
    ]
   },
   {
@@ -4050,12 +4140,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creamos la matriz de observaciones y vector de etiquetas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T12:04:54.153691Z",
-     "start_time": "2020-05-20T12:04:54.134744Z"
+     "end_time": "2020-05-21T01:44:47.164185Z",
+     "start_time": "2020-05-21T01:44:47.148227Z"
     }
    },
    "outputs": [],
@@ -4325,7 +4422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
